# wasm-sort

./: Cargo.toml
src/: lib.rs
